# wirepy

./: MANIFEST.in  Makefile  README  README.md  configure  configure.ac  requirements.txt  setup.py  tox.ini
docs/: Makefile  conf.py  index.rst  modules.rst
examples/: capture_and_dissect.py  create_cube_events.py  list_interfaces.py  show_fields.py  show_protocols.py  show_values.py
wirepy/: __init__.py  compat.py  platform.py.in
wirepy/lib/: cdata.py  cdef.py  column.py  dfilter.py  dumpcap.py  epan.py  ftypes.py  glib2.py  prefs.py  timestamp.py  wireshark.py  wsutil.py  wtap.py
wirepy/tests/: test_cdata.py  test_column.py  test_dfilter.py  test_dumpcap.py  test_epan.py  test_ftypes.py  test_glib2.py  test_prefs.py  test_timestamp.py  test_wsutil.py  test_wtap.py
wirepy/tests/sample_files/: README
